added latest css

--- a/Assets/css/blogs.css
+++ b/Assets/css/blogs.css
@@ -2,52 +2,55 @@
 
 
 
-.main-header-section .filter-section .form-select select{
-        color:#000;
-        font-family:'Gill Sans' !important;
-    }
+.main-header-section .filter-section .form-select select {
+  color: #000;
+  font-family: 'Gill Sans' !important;
+}
 
-@media (max-width:767px) { 
-    .main-header-section .form-select select {
+@media (max-width:767px) {
+  .main-header-section .form-select select {
 
-        width: 100% !important;
-    }
+    width: 100% !important;
+  }
 }
 
 
-@media (max-width: 767px){
-    .main-header-section .heading-section{
-        padding: 0px 20px;
-    }
-    
-    .main-header-section .filter-section .form-select{
-            border-top: 1px solid #E0E0E0;
-            border-radius: 0px;
-    }
-    
-    .main-header-section .filter-section .form-select select{
-        background-color: #FFF;
-        border-color: #FFF;
-        color:#000;
-    }
-    ul.pagination {
-      display: flex;
-      justify-content: center !important;
-      padding: 16px 7px;
-      margin: 0;
+@media (max-width: 767px) {
+  .main-header-section .heading-section {
+    padding: 0px 20px;
+  }
 
-    }
-    #blogTop h3{
-      font-size: 16px !important;
-      padding: 0px 0px !important;
-    }
-    .filter-section .form-select select{
-      background-color: #fff;
-      border-color: #fff;
-      color: #000;
-      width: 100%;
-      padding: 10px 0px;
-    }
+  .main-header-section .filter-section .form-select {
+    border-top: 1px solid #E0E0E0;
+    border-radius: 0px;
+  }
+
+  .main-header-section .filter-section .form-select select {
+    background-color: #FFF;
+    border-color: #FFF;
+    color: #000;
+  }
+
+  ul.pagination {
+    display: flex;
+    justify-content: center !important;
+    padding: 16px 7px;
+    margin: 0;
+
+  }
+
+  #blogTop h3 {
+    font-size: 16px !important;
+    padding: 0px 0px !important;
+  }
+
+  .filter-section .form-select select {
+    background-color: #fff;
+    border-color: #fff;
+    color: #000;
+    width: 100%;
+    padding: 10px 0px;
+  }
 }
 
 .blog-content {
@@ -62,8 +65,8 @@
   padding: 0 !important;
 }
 
-.blog-details-section .wrapper > section.content > .row,
-.blog-details-section .wrapper > section.content > .row .col-md-6,
+.blog-details-section .wrapper>section.content>.row,
+.blog-details-section .wrapper>section.content>.row .col-md-6,
 .post-analytics {
   align-items: center;
 }
@@ -73,15 +76,15 @@
 }
 
 footer.news-detail-footer {
-    border-bottom: 1px solid #e2e2e2;
-    border-top: 1px solid #e2e2e2;
-    margin: 40px 0;
-    padding: 20px 0;
+  border-bottom: 1px solid #e2e2e2;
+  border-top: 1px solid #e2e2e2;
+  margin: 40px 0;
+  padding: 20px 0;
 }
 
 footer.news-detail-footer .nav-link img {
-    margin-top: -5px;
-    margin-right: 5px;
+  margin-top: -5px;
+  margin-right: 5px;
 }
 
 footer.news-detail-footer .ms-Link {
@@ -93,8 +96,8 @@ footer.news-detail-footer .ms-Link {
 }
 
 footer.news-detail-footer .ms-Link:hover {
-    color: var(--bs-secondary);
-    fill: var(--bs-secondary);
+  color: var(--bs-secondary);
+  fill: var(--bs-secondary);
 }
 
 .post-analytics p.nav-link {
@@ -102,30 +105,30 @@ footer.news-detail-footer .ms-Link:hover {
 }
 
 .main-header-section {
-    border: 1px solid #DFDFE1;
-    background-color: #fff;
-    border-radius: 5px;
-    margin-bottom: 45px;
-    padding: 15px 13px;
+  border: 1px solid #DFDFE1;
+  background-color: #fff;
+  border-radius: 5px;
+  margin-bottom: 45px;
+  padding: 15px 13px;
 }
 
 .main-header-section .form-select {
-    border: none;
-    background-image: none;
-    padding: 0px;
+  border: none;
+  background-image: none;
+  padding: 0px;
 }
 
 .main-header-section .form-select select {
-    border-radius: 9px;
-    background-color: #E0E0E0;
-    border-color: #E0E0E0;
-    color: #666666;
-    padding: 10px 10px;
-    width: 46%;
+  border-radius: 9px;
+  background-color: #E0E0E0;
+  border-color: #E0E0E0;
+  color: #666666;
+  padding: 10px 10px;
+  width: 46%;
 }
 
 #blogTop h3 {
-  
+
   letter-spacing: 0px;
   color: #666666;
   font-family: 'Gill Sans';
@@ -135,32 +138,34 @@ footer.news-detail-footer .ms-Link:hover {
   line-height: 40px;
   font-size: 20px;
 }
-article .mb-5{
-  margin-bottom:0px !important;
+
+article .mb-5 {
+  margin-bottom: 0px !important;
 }
 
 
 
 .main-content .content-wrapper .blog-section .card {
-			border: none !important;
-			overflow: hidden;
-			border-radius: 5px;
-		}
+  border: none !important;
+  overflow: hidden;
+  border-radius: 5px;
+}
 
-		.main-content .content-wrapper .blog-section .card .card-content-header .card-title {
-			display: -webkit-box;
-			-webkit-line-clamp: 3;
-			-webkit-box-orient: vertical;
-			overflow: hidden;
-			text-overflow: ellipsis;
-			font-size: 20px;
-			font-family: 'Gill Sans';
-			letter-spacing: 0px;
-			color: #000000;
-			font-weight: 600;
-      text-align: left;
-		}
-        .main-content {
+.main-content .content-wrapper .blog-section .card .card-content-header .card-title {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 20px;
+  font-family: 'Gill Sans';
+  letter-spacing: 0px;
+  color: #000000;
+  font-weight: 600;
+  text-align: left;
+}
+
+.main-content {
   background: #EFEFEF;
   width: 100%;
   min-height: 730px;
@@ -211,6 +216,7 @@ article .mb-5{
 .main-content .content-wrapper .survey-section .card-body h3 {
   font-size: 34px;
 }
+
 .blog-content .content-wrapper {
   padding: 0px 0.937rem;
 }
@@ -220,11 +226,13 @@ article .mb-5{
   overflow: hidden;
   border-radius: 5px;
 }
+
 .main-content .content-wrapper .card.news-card a {
   display: block;
   text-decoration: none;
   padding: 0;
 }
+
 .main-content .content-wrapper .card.news-card .card-content-header {}
 
 /*.main-content .content-wrapper .card.news-card .card-content-header .card-title {
@@ -243,74 +251,75 @@ article .mb-5{
 }
 
 .blog-section .blog-details {
-			display: flex;
-			align-items: center;
-			gap: 20px;
-			border-bottom: none;
-			margin-bottom: 15px;
-      justify-content: flex-start;
-    
-		}
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  border-bottom: none;
+  margin-bottom: 15px;
+  justify-content: flex-start;
 
-		.blog-section .blog-details span.category {
+}
 
-			font-family: 'Gill Sans';
-			font-size: 14px;
-			letter-spacing: 0px;
-			color: #9D0E71;
-			text-transform: capitalize;
-		}
+.blog-section .blog-details span.category {
 
-		.blog-section .blog-details span.date {
+  font-family: 'Gill Sans';
+  font-size: 14px;
+  letter-spacing: 0px;
+  color: #9D0E71;
+  text-transform: capitalize;
+}
 
-			font-family: 'Gill Sans';
-			font-size: 13px;
-			letter-spacing: 0px;
-			color: #300B55;
-			text-transform: capitalize;
-		}
+.blog-section .blog-details span.date {
 
-		.blog-section .blog-details span i {
-			line-height: 0;
-			vertical-align: middle;
-			width: 11px;
-			height: 11px;
-		}
+  font-family: 'Gill Sans';
+  font-size: 13px;
+  letter-spacing: 0px;
+  color: #300B55;
+  text-transform: capitalize;
+}
 
-		.blog-section .blog-details span i img {
-			margin-top: -9px;
-      width:11px;
-		}
+.blog-section .blog-details span i {
+  line-height: 0;
+  vertical-align: middle;
+  width: 11px;
+  height: 11px;
+}
 
-		.blog-section p {
-			margin-bottom: 3px;
-			font-family: 'Gill Sans';
-			font-size: 16px;
-			font-weight: 600;
-			letter-spacing: 0px;
-			color: #000000;
-			opacity: 1;
-      text-align: left;
-		}
+.blog-section .blog-details span i img {
+  margin-top: -9px;
+  width: 11px;
+}
 
-		.blog-section p i {
-			line-height: 0;
-			vertical-align: middle;
-			width: 11px;
-			height: 11px;
-			margin-right: 5px;
-		}
+.blog-section p {
+  margin-bottom: 3px;
+  font-family: 'Gill Sans';
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: 0px;
+  color: #000000;
+  opacity: 1;
+  text-align: left;
+}
 
-		.blog-section p i img {
-			margin-top: -9px;
-      width: 13px;
-      height: 16px;
+.blog-section p i {
+  line-height: 0;
+  vertical-align: middle;
+  width: 11px;
+  height: 11px;
+  margin-right: 5px;
+}
 
-		}
-    .custom-select select:focus-visible {
-       outline: #000
-   }
-     
+.blog-section p i img {
+  margin-top: -9px;
+  width: 13px;
+  height: 16px;
+
+}
+
+.custom-select select:focus-visible {
+  outline: #000
+}
+
 
 
 
@@ -345,8 +354,8 @@ article .mb-5{
 
 .pagination li {
   cursor: pointer;
-  width: 30px ;
-  height: 30px ;
+  width: 30px;
+  height: 30px;
   font-size: 16px;
   font-family: 'Gill Sans' !important;
   border: none;
@@ -499,24 +508,27 @@ ul.pagination {
 /* blog details */
 
 article.wrapper {
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    border: 1px solid #DEDEDE;
-    border-radius: 5px;
-    padding: 47px 93px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  border: 1px solid #DEDEDE;
+  border-radius: 5px;
+  padding: 47px 93px;
 }
-@media (max-width: 991px){
-  article.wrapper{
-    padding-left:15px;
-    padding-right:15px;
+
+@media (max-width: 991px) {
+  article.wrapper {
+    padding-left: 15px;
+    padding-right: 15px;
   }
-} 
-header.header p {
-    color: #666;
-    font-size: 16px;
-    margin: 0;
 }
-header.header p i img{
-  margin-top:-7px;
+
+header.header p {
+  color: #666;
+  font-size: 16px;
+  margin: 0;
+}
+
+header.header p i img {
+  margin-top: -7px;
 }
 
 header.header i {
@@ -525,108 +537,116 @@ header.header i {
 }
 
 header.header h1 {
-    margin: 0;
-    font-size: 34px;
-    color: #000;
+  margin: 0;
+  font-size: 34px;
+  color: #000;
 }
 
 section.content {
-    border-bottom: 1px solid #e2e2e2;
-    border-top: 1px solid #e2e2e2;
-    margin: 40px 0;
-    padding: 20px;
+  border-bottom: 1px solid #e2e2e2;
+  border-top: 1px solid #e2e2e2;
+  margin: 40px 0;
+  padding: 20px;
 }
+
 section.content ul {
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: end;
-    list-style-type: none;
-    /* gap: 50px; */
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  list-style-type: none;
+  /* gap: 50px; */
 }
+
 section.content ul li {
-    line-height: normal;
-    position: relative;
-    padding-right: 50px;
-    padding-left: 0px;
+  line-height: normal;
+  position: relative;
+  padding-right: 50px;
+  padding-left: 0px;
 }
-@media (max-width:991px){
-  section.content ul li .txt{
-    display:none;
+
+@media (max-width:991px) {
+  section.content ul li .txt {
+    display: none;
   }
-  section.content ul{
-    padding:0;
-    justify-content:space-around;
+
+  section.content ul {
+    padding: 0;
+    justify-content: space-around;
   }
-  section.content ul li{
-    padding:0;
+
+  section.content ul li {
+    padding: 0;
   }
-  section.content ul li:first-child span{
-    display:none;
+
+  section.content ul li:first-child span {
+    display: none;
   }
 }
 
 section.content ul li i img {
-    height: 18px;
-    margin-top: -9px;
-    margin-right: 5px;
+  height: 18px;
+  margin-top: -9px;
+  margin-right: 5px;
 }
 
 
 section.news-detail-text {
-    margin: 40px 0;
+  margin: 40px 0;
 }
 
 /* agi list icon */
 
 .news-detail-text ul {
-    list-style-type: none;
-    margin: 0px;
-    padding: 0px;
-    list-style-image: url(../Icons/icon-ag.png) !important;
-    font-family: "Gill Sans" !important;
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+  list-style-image: url(../Icons/icon-ag.png) !important;
+  font-family: "Gill Sans" !important;
 }
 
 
 div[class^="ExternalClass"] ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 div[class^="ExternalClass"] ul li {
-    position: relative;
-    margin-bottom: 20px;
-    padding: 10px 0px 0 0px;
+  position: relative;
+  margin-bottom: 20px;
+  padding: 10px 0px 0 0px;
 }
 
-div[class^="ExternalClass"] ul li span{
-    margin-left:5px;
+div[class^="ExternalClass"] ul li span {
+  margin-left: 5px;
 }
 
 
 div[class^="ExternalClass"] ul li :marker {
-    position: absolute;
-    left: 0;
-    top: 6px;
+  position: absolute;
+  left: 0;
+  top: 6px;
 }
 
 /* eo agi list icon */
 
 li.news-list-style {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
+
 ul.news-list-style li {
-    position: relative;
-    margin-bottom: 20px;
-    padding: 10px 0px 0 30px;
+  position: relative;
+  margin-bottom: 20px;
+  padding: 10px 0px 0 30px;
 }
+
 ul.news-list-style li i {
-    position: absolute;
-    left: 0;
-    top: 6px;
+  position: absolute;
+  left: 0;
+  top: 6px;
 }
 
 
@@ -635,7 +655,7 @@ ul.news-list-style li i {
 }
 
 .commentsContainer .comment {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 .comment-detail p {
@@ -643,63 +663,63 @@ ul.news-list-style li i {
 }
 
 .comment-wrapper textarea {
-    resize: none !important;
+  resize: none !important;
 }
 
 .comments-count-row {
-    margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 .comments-count-row .comments-count {
-    font-family: 'Gill Sans';
-    font-size: 24px;
-    font-weight: 600;
+  font-family: 'Gill Sans';
+  font-size: 24px;
+  font-weight: 600;
 }
 
 .comments-count-row .comments-count .count {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .comment-wrapper .comment+.comment {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 .comment-controls {}
 
 .comment-controls .nav-link {
-    padding: 0 50px 0 0px;
-    color: var(--bs-primary);
+  padding: 0 50px 0 0px;
+  color: var(--bs-primary);
 }
 
 .comment-controls .nav-link img {
-    margin-top: -6px;
+  margin-top: -6px;
 }
 
 .add-comment .form-control {
-    min-width: 500px;
+  min-width: 500px;
 }
 
 .post-analytics a:first-child {
-    width: 94px;
+  width: 94px;
 }
 
 .userImage {
-    width: 3rem;
-    height: 3rem;
-    border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
 }
 
 /* responsive css for blog details */
 .content-wrapper.blog-details-section {}
 
 .content-wrapper.blog-details-section .container {
-    padding: 0;
+  padding: 0;
 }
 
 header.header h1 {
-    font-size: 20px;
-    line-height: 35px;
-    margin-top: 10px;
+  font-size: 20px;
+  line-height: 35px;
+  margin-top: 10px;
 }
 
 /* section.content {
@@ -707,10 +727,10 @@ header.header h1 {
 } */
 
 section.content ul {
-    /* justify-content: space-between !important;
+  /* justify-content: space-between !important;
     gap: 20px; */
-    padding-top: 15px;
-    padding-bottom: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 /* section.content ul li {
@@ -736,32 +756,33 @@ section.content ul li a:hover {
 }
 
 section.content ul li:last-child {
-    font-weight: 700;
-    color: #000;
+  font-weight: 700;
+  color: #000;
 }
 
 nav.nav.post-analytics {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
 .post-analytics .nav-link {
-    padding: 10px 0;
-    margin: 0 !important;
-    color: #666666;
+  padding: 10px 0;
+  margin: 0 !important;
+  color: #666666;
 }
 
 div[class^="ExternalClass"] ul {
-    list-style-position: inside;
+  list-style-position: inside;
 }
 
 footer.news-detail-footer nav.nav.justify-content-md-end {
-    justify-content: end;
+  justify-content: end;
 }
 
-.formSection {
+/*.formSection {
     display: block;
     width: 100%;
 }
+
 
 .formSection .add-comment .form-control {
     min-width: auto !important;
@@ -772,35 +793,54 @@ footer.news-detail-footer nav.nav.justify-content-md-end {
     display: block !important;
     align-items: flex-start !important;
 }
+*/
+
+@media (max-width: 767px) {
+  .add-comment .form-control {
+    min-width: 100% !important;
+  }
+
+  .comment .add-comment {
+    flex-direction: column !important;
+    align-items: flex-start !important;
+    gap: 0 !important;
+  }
+
+  .comment .col {
+    align-items: flex-start !important;
+  }
+}
 
 .comment-wrapper .comment .col.d-flex.align-items-center {
-    align-items: flex-start !important;
+  align-items: flex-start !important;
 }
 
 .comment-wrapper .comment .comment-user-icon {
-    width: 40px;
-    height: 40px;
-    border-radius: 80px;
+  width: 40px;
+  height: 40px;
+  border-radius: 80px;
 }
 
 /* Loader*/
 
 .loaderContainer {
-  
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
 }
 
 .loader {
-  border: 2px solid #f3f3f3; /* Light grey */
-  border-top: 2px solid #3498db; /* Blue */
+  border: 2px solid #f3f3f3;
+  /* Light grey */
+  border-top: 2px solid #3498db;
+  /* Blue */
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -808,6 +848,11 @@ footer.news-detail-footer nav.nav.justify-content-md-end {
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
