--- a/Assets/css/business.css
+++ b/Assets/css/business.css
@@ -2,12 +2,22 @@
 		overflow-x: hidden;
 	}
 
+	/*#businessBannerCarousel .carousel-caption {
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			bottom: auto;
+			right: auto;
+		}*/
+
 	#businessBannerCarousel .carousel-caption {
 		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
+		left: 12% !important;
+		transform: translate(-12%, -50%) !important;
 		bottom: auto;
 		right: auto;
+		text-align: left;
+		font-family: 'Gill Sans';
 	}
 
 	#businessBannerCarousel .carousel-caption h2 {
@@ -25,7 +35,7 @@
 	#businessBannerCarousel .carousel-item img,
 	#businessBannerCarousel .carousel-item video {
 		object-fit: cover;
-		max-height: 650px;
+		max-height: 720px;
 		width: 100vw;
 	}
 
@@ -133,6 +143,16 @@
 		font-family: 'Gill Sans';
 	}
 
+	.txt-img-section .business-txt-img h2 div[class^="ExternalClass"],
+	.txt-img-section .business-txt-img div[class^="ExternalClass"] div,
+	.txt-img-section .business-txt-img div[class^="ExternalClass"] span,
+	.txt-img-section .business-txt-img div[class^="ExternalClass"] p {
+		font-size: 35px !important;
+		letter-spacing: 0px;
+		color: #000000;
+		line-height: 40px;
+	}
+
 	.txt-img-section .business-txt-img h2 {
 		font-size: 35px;
 		letter-spacing: 0px;
@@ -231,6 +251,11 @@
 
 	.testimonial-slider .button-container {
 		text-align: center;
+		display: flex;
+		gap: 10px;
+		justify-content: center;
+		align-self: center;
+		justify-self: center;
 	}
 
 	.testimonial-slider .button-container button {
@@ -835,4 +860,13 @@
 
 	.root-85 {
 		background-color: transparent;
+	}
+
+	div[class^="agiIntBusFuncIntro"] {
+		background-color: #EEE;
+	}
+
+	.our-services,
+	.media-section {
+		font-family: 'Gill Sans';
 	}
