--- a/Assets/css/contactUs.css
+++ b/Assets/css/contactUs.css
@@ -78,6 +78,12 @@
 	font-size: 16px !important;
 }
 
+headLineDetail {
+	font-family: Gill Sans;
+	font-size: 20px;
+	color: #444444;
+}
+
 
 @media (max-width: 767px) {
 	.contact-section-main {
